# resume-creator

./: .envrc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  mypy.ini  pyproject.toml
resume_creator/: __init__.py  __main__.py  logger.py  markdown.py  pdf.py  settings.py  text.py
resume_creator/templates/: resume.md.j2  resume.txt.j2
