[tool.poetry]
name = "resume-creator"
version = "1.0.0"
description = ""
authors = ["Tim McFadden <mtik00@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "resume_creator"}]

[tool.poetry.dependencies]
python = "^3.10"
jinja2 = "^3.1.2"
pendulum = "^2.1.2"
reportlab = "^3.6.12"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
pre-commit = "^2.21.0"
ipdb = "^0.13.11"
flake8 = "^6.0.0"
commitizen = "^2.39.1"
isort = "^5.11.4"
mypy = "^0.991"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.commitizen]
name = "cz_conventional_commits"
version = "1.0.0"
version_files = [
    "pyproject.toml:version"
]
update_changelog_on_bump = true
gpg_sign = true
annotated_tag = true
style = [
    ["qmark", "fg:#ff9d00 bold"],
    ["question", "bold"],
    ["answer", "fg:#ff9d00 bold"],
    ["pointer", "fg:#ff9d00 bold"],
    ["highlighted", "fg:#ff9d00 bold"],
    ["selected", "fg:#cc5454"],
    ["separator", "fg:#cc5454"],
    ["instruction", ""],
    ["text", ""],
    ["disabled", "fg:#858585 italic"]
]

[tool.commitizen.customize]
change_type_map = {"Feat" = "Feature"}
